API/k8s/environments/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sponspay-api-prod
  labels:
    name: sponspay-api-prod
    environment: production
