API/k8s/environments/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sponspay-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        environment: production
    spec:
      containers:
      - name: api
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
