API/k8s/environments/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sponspay-api-service
  labels:
    environment: production
  annotations:
    cloud.google.com/backend-config: '{"default": "prod-sponspay-api-config"}'
